Docker and Kubernetes/kubernetes/nodejs-app-multi.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs-app
  labels:
    name: nodejs-app
spec:
  containers:
  - name: nodejs-app
    image: heroku/nodejs-hello-world
    ports:
      - containerPort: 3000
  - name: mysql-app
    image: mysql
    ports:
      - containerPort: 3306
