Docker and Kubernetes/kubernetes/nodejs-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nodejs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: nodejs-ingress
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
        - path: "/nodejs"
          backend:
            serviceName: nodejs-app
            servicePort: 3000
